Bug 32082 - [EDITING] Table Number Format not modified for empty table cells
Summary: [EDITING] Table Number Format not modified for empty table cells
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.3.0 Beta3
Hardware: x86 (IA32) Windows (All)
: medium normal
Assignee: Cédric Bosdonnat
URL:
Whiteboard: bibisected35 bibisected35older target...
Keywords: regression
Depends on:
Blocks:
 
Reported: 2010-12-03 09:04 UTC by Rainer Bielefeld Retired
Modified: 2025-03-30 11:05 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Sample for original report (12.14 KB, application/vnd.oasis.opendocument.text)
2010-12-03 09:04 UTC, Rainer Bielefeld Retired
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Bielefeld Retired 2010-12-03 09:04:57 UTC
Created attachment 40783 [details]
Sample for original report

I saw that  with "LibreOffice 3.3.0Beta3 - WIN XP DE [OOO330m12 (build 3.2.99.3)]"
Steps to reproduce:

1. open attached "SampleNumbeFormat.odt"
2. click into cell with "2,00 €"
3. 'Right click -> Number Format'
    Dialog opens
4. Slect formatting string in field Format code
5. <Cntrl>+<C>
6. <Cancel>
7. Select 2 Cells below "2,00 €"
8. 'Right click -> Number Format'
    Dialog opens
9. click into pane "Format code" and paste formatting string
10. <ok>
    Expected: All selected cells with new currency format
    Actual: "3" becomes "3,00 €" as expected
11. Type "4" into field below "3,00 €" and press <TAB>
    Expected: 4 becomes "4,00 €" due to results of step 10
    Actual: Formatting change has not been accepted for empty cell, Contens 
            shown as "4"

A test with right column will show the same bad result, number format will not be accepted for empty cells.

Works fine for me with OOo 3.1.1 and OOo300m92 (Build 9541)

NEW because I was able to reproduce that problem on a second PC
   
I have created the sample document with OOo 3.1.1, but I see the same with documents created with LibO
Comment 1 Rainer Bielefeld Retired 2010-12-04 00:38:51 UTC
Any Ideas?
Comment 2 Björn Michaelsen 2012-03-01 09:01:31 UTC
Regression does appear in oldest version of bibisect-3.5.tar.lzma and must be older.
Comment 3 angelorti 2012-10-04 17:06:01 UTC
happens also on 3.6.0.2
Comment 4 Julien Nabet 2012-10-27 13:29:44 UTC
On pc Debian x86-64 with master sources updated today, I reproduced this problem.
No specific logs on console.
Comment 5 Commit Notification 2013-04-03 13:28:11 UTC
Jan Holesovsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f8be3d02573c4d6d753b5e0c1a449e932f94bd81

fdo#32082: Do not reset number format in table cells on edit.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2013-04-04 08:35:57 UTC
Jan Holesovsky committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=11f9cdc2e273a827dfe29316de6f679077ee6a59&h=libreoffice-4-0

fdo#32082: Do not reset number format in table cells on edit.


It will be available in LibreOffice 4.0.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Jan Holesovsky 2013-04-04 08:38:46 UTC
Closing as fixed now :-)
Comment 8 Buovjaga 2023-10-16 13:28:58 UTC
Notes for unit test writers:

Revert has to be done manually.
Comment 9 Buovjaga 2025-03-30 11:05:47 UTC
More notes for unit test writers:

SwDoc::ChkBoxNumFmt() in sw/source/core/docnode/ndtbl.cxx was renamed to SwDoc::ChkBoxNumFormat(). The logic seen in the 2013 change is largely intact.